Practice: Binary Tree Depth

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "system_error": "cpp",
         "type_traits": "cpp",
         "xlocnum": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "ostream": "cpp"
     }
 }
