--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
         "ostream": "cpp",
         "xtree": "cpp",
         "set": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "utility": "cpp",
+        "xhash": "cpp",
+        "queue": "cpp"
     }
 }
